--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -71,6 +71,7 @@
 @import 'layout/logo-header';
 @import 'layout/printable-agenda';
 @import 'layout/printable-newsletter';
+@import 'layout/decision-viewer';
 
 
 // PRINT STYLING
