--- a/app/components/documents/batch-details/batch-documents-details-modal.hbs
+++ b/app/components/documents/batch-details/batch-documents-details-modal.hbs
@@ -7,7 +7,7 @@
           <tr>
             {{#if (user-may "manage-documents")}}
               <th class="auk-table-checkbox-col">
-                <AuControlCheckbox
+                <AuCheckbox
                   data-test-batch-documents-details-select-all
                   @checked={{this.areAllSelected}}
                   @onChange={{this.toggleAllSelection}}
