--- a/app/components/documents/batch-details/document-details-row.hbs
+++ b/app/components/documents/batch-details/document-details-row.hbs
@@ -4,7 +4,7 @@
 >
   {{#if @isEditingEnabled}}
     <td class="auk-table-checkbox-col">
-      <AuControlCheckbox
+      <AuCheckbox
         @checked={{@isSelected}}
         @onChange={{fn @onSelect @row}}
       />
