--- a/app/components/news-item/table-row.hbs
+++ b/app/components/news-item/table-row.hbs
@@ -41,7 +41,7 @@
     {{/each}}
   </td>
   <td class="lt-cell align-left">
-    <AuControlCheckbox
+    <AuCheckbox
       data-test-table-row-news-item-row-checkbox-in-newsletter={{true}}
       @checked={{@newsItem.inNewsletter}}
       @disabled={{or
