--- a/app/styles/au/_au-components.scss
+++ b/app/styles/au/_au-components.scss
@@ -28,6 +28,7 @@ $au-button-height: 3.4rem;
 @import 'ember-appuniversum/c-card';
 @import 'ember-appuniversum/c-content';
 @import 'ember-appuniversum/c-control';
+@import 'ember-appuniversum/c-control-group';
 @import 'ember-appuniversum/c-dropdown';
 @import 'ember-appuniversum/c-heading';
 @import 'ember-appuniversum/c-help-text';
