--- a/app/templates/publications/overview/search.hbs
+++ b/app/templates/publications/overview/search.hbs
@@ -95,12 +95,12 @@
                 @didUpdate={{this.updateSelectedPublicationStatuses}}
               />
             </div>
-            <AuControlCheckbox
+            <AuCheckbox
               @checked={{this.urgentOnly}}
               @onChange={{this.toggleUrgentOnly}}
             >
               <span class="au-u-medium">{{t "publication-urgent"}}</span>
-            </AuControlCheckbox>
+            </AuCheckbox>
           </div>
         </div>
         <div class="auk-o-grid-col-10">
