--- a/app/templates/styleguide/panel.hbs
+++ b/app/templates/styleguide/panel.hbs
@@ -125,7 +125,9 @@
         </Auk::Toolbar::Group>
         <Auk::Toolbar::Group @position="right">
           <Auk::Toolbar::Item>
-            <AuControlCheckbox @label="Toon opties" />
+            <AuCheckbox>
+              Toon opties
+            </AuCheckbox>
           </Auk::Toolbar::Item>
         </Auk::Toolbar::Group>
       </Auk::Toolbar>
