--- a/app/components/mandatees/mandatees-selector-modal.hbs
+++ b/app/components/mandatees/mandatees-selector-modal.hbs
@@ -2,12 +2,13 @@
   <Auk::Modal::Header @title={{t "add-minister"}} @onClose={{@onClose}} />
   <Auk::Modal::Body>
     <div class="auk-o-flex--inline auk-o-flex--vertical-center auk-u-mb-2">
-      <AuControlCheckbox
+      <AuCheckbox
         data-test-mandatees-selector-open-search
-        @label={{t "open-search-for-mandatee"}}
         @checked={{this.openSearch}}
         @onChange={{this.setOpenSearch}}
-      />
+      >
+        {{t "open-search-for-mandatee"}}
+      </AuCheckbox>
       <Auk::Icon @skin="muted" @name="circle-info" class="auk-u-ml">
         <EmberTooltip @tooltipClass="auk-tooltip" @side="bottom">
           <p>
