--- a/app/components/publications/publication/publication-activities/publication-request-modal.hbs
+++ b/app/components/publications/publication/publication-activities/publication-request-modal.hbs
@@ -31,11 +31,12 @@
           />
         </div>
         <div class="auk-form-group auk-u-mt-4">
-          <AuControlCheckbox
-            @label={{t "update-publication-status-publication-requested"}}
+          <AuCheckbox
             @checked={{this.mustUpdatePublicationStatus}}
             @onChange={{this.setPublicationRequestedStatus}}
-          />
+          >
+            {{t "update-publication-status-publication-requested"}}
+          </AuCheckbox>
         </div>
         <div class="auk-form-group">
           <Auk::Label for="publicationRequestModal_subject" @required={{true}}>
