--- a/app/components/publications/publication/translations/translation-upload-modal.hbs
+++ b/app/components/publications/publication/translations/translation-upload-modal.hbs
@@ -15,12 +15,13 @@
       @onDeletePiece={{perform this.deleteUploadedPiece}}
     />
     <div class="auk-form-group auk-u-mt-4">
-      <AuControlCheckbox
+      <AuCheckbox
         data-test-translation-upload-update-status
-        @label={{t "update-publication-status-translation-received"}}
         @checked={{this.mustUpdatePublicationStatus}}
         @onChange={{this.setTranslationReceivedStatus}}
-      />
+      >
+        {{t "update-publication-status-translation-received"}}
+      </AuCheckbox>
     </div>
     <div
       data-test-translation-upload-received-date
