--- a/app/templates/styleguide/table.hbs
+++ b/app/templates/styleguide/table.hbs
@@ -146,7 +146,7 @@
         <td>Data punt</td>
         <td>
           <div class="auk-form-group">
-            <AuControlCheckbox />
+            <AuCheckbox/>
           </div>
         </td>
       </tr>
