--- a/app/templates/publications/overview.hbs
+++ b/app/templates/publications/overview.hbs
@@ -14,6 +14,9 @@
           <Auk::Tab data-test-route-publications-index-tabs-all @route="publications.overview.all">
             {{t "publications-tabs-all"}}
           </Auk::Tab>
+          <Auk::Tab @route="publications.overview.shortlist">
+            {{t "publications-tabs-shortlist"}}
+          </Auk::Tab>
           <Auk::Tab  data-test-route-publications-index-tabs-urgent @route="publications.overview.urgent">
             {{t "publications-tabs-urgent"}}
           </Auk::Tab>
