--- a/app/components/agenda/agendaitem/decision-viewer.hbs
+++ b/app/components/agenda/agendaitem/decision-viewer.hbs
@@ -1,6 +1,6 @@
 <div class="l-decision-viewer">
   <div
-    class="au-u-padding-left-huge au-u-padding-right-huge au-u-padding-bottom-huge l-decision-viewer__page"
+    class="au-u-padding-left-large au-u-padding-right-large au-u-padding-bottom-huge au-u-padding-top l-decision-viewer__page" ...attributes
   >
     <div class="au-u-margin-bottom-large au-u-flex au-u-flex--column">
       <Utils::LogoHeader />
