--- a/app/styles/layout/_decision-viewer.scss
+++ b/app/styles/layout/_decision-viewer.scss
@@ -7,7 +7,7 @@
 }
 
 .l-decision-viewer__page {
-    width: 90rem;
+    width: 700px;
     margin: 0 auto;
     background-color: var(--au-white);
 }
