KAS-3954 Move redundant checkbox-tree functionality to actual component, expand checkbox-tree component with grid support (layout) & refactor prototype styling

--- a/app/components/auk/checkbox-tree.hbs
+++ b/app/components/auk/checkbox-tree.hbs
@@ -10,6 +10,7 @@
   <AuCheckboxGroup
     @selected={{this.selectedItems}}
     @onChange={{this.toggleItem}}
+    class={{this.layoutClass}}
     as |Group|
   >
     {{#each @items as |item|}}
