fix: handle empty responses from the shortlist service

--- a/app/templates/signatures/shortlist.hbs
+++ b/app/templates/signatures/shortlist.hbs
@@ -1,6 +1,6 @@
 <div class="auk-u-maximize-height auk-scroll-wrapper">
   <div class="auk-scroll-wrapper__body">
-    <KDataTable @content={{@model.pieces}} @enablePagination={{false}}>
+    <KDataTable @content={{@model}} @enablePagination={{false}}>
       <:header>
         <th>{{t "document-name"}}</th>
         <th>{{t "decision-date"}}</th>
